# chronoAI

./: LICENSE  POST_MORTEM_2025-10-30.md  README.md  auth_manager.py  event_manager.py  google_cal.py  handoff.md  main.py  main_window.py  notification_popup.py  packaging.py  poc_test.py  prd.md  pyproject.toml  scheduler.py  settings_ui.py  test_event_manager.py  tray_icon.py  tts_engine.py  zoho_cal.py
src/chronoai/: __init__.py  main.py
src/chronoai/calendar/: __init__.py  google_calendar.py  manager.py  zoho_calendar.py
src/chronoai/notifications/: __init__.py  voice_engine.py
src/chronoai/services/: __init__.py  notification_service.py  scheduler.py
src/chronoai/ui/: __init__.py  main_window.py
src/chronoai/utils/: logger.py
